--- a/essays/index.html
+++ b/essays/index.html
@@ -1,6 +1,10 @@
 ---
-title: Essays
-layout: home
+layout: essay
+type: essay
+title: "Justin Wang Techfolio"
+date: 2022-09-07
+published: true
+labels:
+  - Assignment 3
+  - MIS
 ---
-
-{% include essays/essays.html %}
