--- a/essays/index.html
+++ b/essays/index.html
@@ -1,10 +1,6 @@
 ---
-layout: essay
-type: essay
-title: "Justin Wang Techfolio"
-date: 2022-09-07
-published: true
-labels:
-  - Assignment 3
-  - MIS
+title: essays
+layout: home
 ---
+
+{% include essays/essays.html %}
